Prevent task UI from scrolling if sidebar overflows

--- a/src/modules/dashboard/components/Task/Task.css
+++ b/src/modules/dashboard/components/Task/Task.css
@@ -14,6 +14,7 @@
   padding: 11px;
   height: calc(100vh - 70px);
   width: sidbarWidth;
+  overflow-y: auto;
   border-right: 1px solid var(--grey-blue-0);
 }
 
